Updated to Cofoundry v0.1.5

--- a/src/Cofoundry.Samples.PageModules/Cofoundry/PageModules/DirectoryList/DirectoryList.cshtml
+++ b/src/Cofoundry.Samples.PageModules/Cofoundry/PageModules/DirectoryList/DirectoryList.cshtml
@@ -8,9 +8,12 @@
 *@
 @Cofoundry.Module.UseDescription("A list of pages in a specific directory")
 
+@if (Model.Pages.Items.Any())
+{
 <ul>
     @foreach (var page in Model.Pages.Items)
     {
         <li><a href="@Cofoundry.Routing.Page(page)">@page.Title</a></li>
     }
 </ul>
+}
