--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageList/PageList.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageList/PageList.cshtml
@@ -5,9 +5,9 @@
 @if (!EnumerableHelper.IsNullOrEmpty(Model.Pages))
 {
 <ul>
-    @foreach (var page in Model.Pages)
+    @foreach (var pageItem in Model.Pages)
     {
-        <li><a href="@Cofoundry.Routing.Page(page)">@page.Title</a></li>
+        <li><a href="@Cofoundry.Routing.Page(pageItem)">@pageItem.Title</a></li>
     }
 </ul>
 }
