Progress with updating docs for Cofoundry 0.2

--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/DirectoryList/DirectoryList.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/DirectoryList/DirectoryList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DirectoryListDisplayModel
+@inject ICofoundryBlockTypeHelper<DirectoryListDisplayModel> Cofoundry
 
 @Cofoundry.BlockType.UseDescription("A list of pages in a specific directory")
 
