--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/HorizontalLine/HorizontalLine.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/HorizontalLine/HorizontalLine.cshtml
@@ -1,4 +1,5 @@
 ﻿@model HorizontalLineDataModel
+@inject ICofoundryBlockTypeHelper<HorizontalLineDataModel> Cofoundry
 
 @{
     Cofoundry.BlockType.UseDescription("A horizontal line indicating a thematic break in content");
