--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageList/PageList.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageList/PageList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PageListDisplayModel
+@inject ICofoundryBlockTypeHelper<PageListDisplayModel> Cofoundry
 
 @Cofoundry.BlockType.UseDescription("An orderable list of links to pages")
 
