--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageSnippet/PageSnippet.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/PageSnippet/PageSnippet.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PageSnippetDisplayModel
+@inject ICofoundryBlockTypeHelper<PageSnippetDisplayModel> Cofoundry
 
 @Cofoundry.BlockType.UseDescription("Displays summary information about a page.")
 
