--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/Quotation/Quotation.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/Quotation/Quotation.cshtml
@@ -1,4 +1,5 @@
 ﻿@model QuotationDisplayModel
+@inject ICofoundryBlockTypeHelper<QuotationDisplayModel> Cofoundry
 
 @{
     Cofoundry.BlockType.UseDescription("Quotation with optional citation and title");
