--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/TextList/TextList.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/TextList/TextList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TextListDisplayModel
+@inject ICofoundryBlockTypeHelper<TextListDisplayModel> Cofoundry
 
 @{ 
     Cofoundry.BlockType.UseDescription("A list of text items");
