--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/VimeoVideo/VimeoVideo.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/VimeoVideo/VimeoVideo.cshtml
@@ -1,4 +1,5 @@
 ﻿@model VimeoVideoDataModel
+@inject ICofoundryBlockTypeHelper<VimeoVideoDataModel> Cofoundry
 
 @{
     Cofoundry.BlockType.UseDescription("Embed a Vimeo video");
