--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageTemplates/General.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageTemplates/General.cshtml
@@ -1,4 +1,5 @@
-﻿@model PageViewModel
+﻿@model IPageViewModel
+@inject ICofoundryTemplateHelper<IPageViewModel> Cofoundry
 @{
     Layout = null;
 }
