--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/YouTubeVideo/YouTubeVideo.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/YouTubeVideo/YouTubeVideo.cshtml
@@ -1,4 +1,5 @@
 ﻿@model YoutubeVideoDataModel
+@inject ICofoundryBlockTypeHelper<YoutubeVideoDataModel> Cofoundry
 
 @{
     Cofoundry.BlockType.UseDescription("Embed a YouTube video");
