--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/DirectoryList/DirectoryList.cshtml
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry/PageBlockTypes/DirectoryList/DirectoryList.cshtml
@@ -8,7 +8,7 @@
 <ul>
     @foreach (var pageItem in Model.Pages.Items)
     {
-        <li><a href="@Cofoundry.Routing.Page(pageItem)">@pageItem.Title</a></li>
+        <li><a href="@Cofoundry.Routing.Page(pageItem.PageRoute)">@pageItem.Title</a></li>
     }
 </ul>
 }
